# threat-thinker

./: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: lint-format.yml  release.yml  test.yml
benchmarking/: README.md
benchmarking/aws/: expected_threats.json  expected_threats.md  system.json  system.mmd  system.xml
benchmarking/rag/: expected_threats.json  expected_threats.md  system.mmd  system.threat-dragon.json  system.xml
benchmarking/scripts/: bench_metrics.py
benchmarking/web/: expected_threats.json  expected_threats.md  system.mmd  system.threat-dragon.json  system.xml
configs/: serve.example.yaml
docker/: Dockerfile  compose.yaml
docs/: README.md  cli.md  design.md  diagram.md  hints.md  ir.md  rag.md  reports.md  serve_config.md  troubleshooting.md  tutorials.md
examples/aws/: hint.yaml  report.json  report.md
examples/demo-app/: Caddyfile  README.md  compose.yaml  serve.example.yaml
examples/demo-app/proxy/: main.py
examples/nested-zone/: system.threat-dragon.json  system.xml
examples/web/: diff-analysis.json  diff-analysis.md  report.json  report.md  system.threat-dragon.json  updated-report.json  updated-report.md
src/: __init__.py  cliui.py  constants.py  exporters.py  hint_processor.py  main.py  models.py  threat_analyzer.py  threat_thinker.py  webui.py  zone_utils.py
src/llm/: client.py  inference.py  response_utils.py
src/parsers/: __init__.py  drawio_parser.py  image_parser.py  mermaid_parser.py  threat_dragon_parser.py
src/rag/: __init__.py  local.py
src/threat_thinker/: cliui.py  constants.py  context_loader.py  exporters.py  hint_processor.py  input_loader.py  main.py  models.py  threat_analyzer.py  webui.py  zone_utils.py
tests/: test_cli_outputs.py  test_context_loader.py  test_drawio_parser.py  test_exporters.py  test_hint_processor.py  test_image_parser.py  test_input_loader.py  test_ir_parser.py  test_llm_context_prompt.py  test_llm_ollama.py  test_local_rag.py  test_mermaid_parser.py  test_threat_analyzer.py  test_threat_dragon_exporter.py  test_threat_dragon_parser.py  test_webui_helpers.py
tests/fixtures/: mermaid_flowchart_with_pipe_labels.mmd  sample_graph_ir.json  threat_dragon_boundaries_nested.json  threat_dragon_simple.json
tests/llm/: test_inference.py
tests/serve/: test_api.py  test_auth.py  test_config.py  test_jobstore.py  test_ratelimit.py  test_zip_builder.py
tests/service/: test_analyzer.py
(+52 files in other folders)
