[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "threat-thinker"
version = "0.3.1"
description = "AI-powered threat modeling that turns architecture diagrams into actionable risks"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache 2.0" }
dependencies = []

[project.scripts]
threat-thinker = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]