[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "threat-thinker"
version = "0.5.0"
description = "AI-powered threat modeling that turns architecture diagrams into actionable risks"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache 2.0" }
dependencies = [
    "anthropic==0.75.0",
    "beautifulsoup4==4.14.3",
    "boto3==1.42.14",
    "fastapi==0.128.0",
    "fakeredis==2.32.1",
    "gradio==5.49.1",
    "numpy==2.3.4",
    "openai==2.11.0",
    "pyaml==25.7.0",
    "python-multipart==0.0.20",
    "pypdf==6.5.0",
    "pytest==8.4.2",
    "pytest-asyncio==1.3.0",
    "redis==7.1.0",
    "requests==2.32.5",
    "ruff==0.14.11",
    "tiktoken==0.12.0",
    "uvicorn==0.40.0"
]

[project.scripts]
threat-thinker = "threat_thinker.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
