[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "threat-thinker"
version = "0.7.0"
description = "AI-powered threat modeling that turns architecture diagrams into actionable risks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache 2.0" }
dependencies = [
    "anthropic==0.86.0",
    "beautifulsoup4==4.14.3",
    "boto3==1.42.74",
    "fastapi==0.135.3",
    "gradio==6.10.0",
    "numpy==2.4.3",
    "openai==2.30.0",
    "PyYAML==6.0.3",
    "python-multipart==0.0.22",
    "pypdf==6.9.2",
    "redis==7.4.0",
    "requests==2.33.0",
    "tiktoken==0.12.0",
    "uvicorn==0.42.0"
]

[project.optional-dependencies]
dev = [
    "fakeredis==2.34.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.7",
]

[project.scripts]
threat-thinker = "threat_thinker.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
